@@ -2,6 +2,7 @@ package lk.chamasha.test.cases.service.impl;
 
 import lk.chamasha.test.cases.controller.request.DepartmentRequest;
 import lk.chamasha.test.cases.controller.response.DepartmentResponse;
+import lk.chamasha.test.cases.exception.DepartmentNotCreatedException;
 import lk.chamasha.test.cases.exception.DepartmentNotFoundException;
 import lk.chamasha.test.cases.model.Department;
 import lk.chamasha.test.cases.repository.DepartmentRepository;
@@ -11,7 +12,11 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,43 +24,66 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@SpringBootTest
 class DepartmentServiceImpSpringUnitTest {
 
-    @Mock
-    private DepartmentRepository departmentRepository;
 
     @InjectMocks
-    private DepartmentServiceImpl departmentService;
+    private DepartmentServiceImpl departmentService; // service under test
+
+    @Mock
+    private DepartmentRepository departmentRepository; // mocked dependency
+
+    private Department department;
 
     @BeforeEach
-    void setup() {
-        MockitoAnnotations.openMocks(this);
+    void setUp() {
+        department = new Department();
+        department.setId(1L);
+        department.setDepartmentName("Engineering");
     }
 
     @Test
-    @DisplayName("Create department successfully")
-    void testCreateDepartment() {
+    void createDepartment_Success() throws DepartmentNotCreatedException {
         DepartmentRequest request = new DepartmentRequest();
-        request.setDepartmentName("Computer Science");
+        request.setDepartmentName("Engineering");
 
-        Department savedDept = new Department();
-        savedDept.setId(1L);
-        savedDept.setDepartmentName("Computer Science");
+        when(departmentRepository.findByDepartmentName("Engineering")).thenReturn(Optional.empty());
 
-        when(departmentRepository.save(any(Department.class))).thenReturn(savedDept);
+        Department saved = new Department();
+        saved.setId(1L);
+        saved.setDepartmentName("Engineering");
 
-        DepartmentResponse response = departmentService.createDepartment(request);
+        when(departmentRepository.save(any(Department.class))).thenReturn(saved);
+
+        DepartmentResponse response = departmentService.create(request);
 
         assertNotNull(response);
-        assertEquals(1L, response.getId());
-        assertEquals("Computer Science", response.getDepartmentName());
+        assertEquals(saved.getId(), response.getId());
+        assertEquals("Engineering", response.getDepartmentName());
 
-        verify(departmentRepository).save(any(Department.class));
+        verify(departmentRepository, times(1)).findByDepartmentName("Engineering");
+        verify(departmentRepository, times(1)).save(any(Department.class));
     }
 
     @Test
-    @DisplayName("Get all departments")
-    void testGetAllDepartments() {
+    void createDepartment_AlreadyExists() {
+        DepartmentRequest request = new DepartmentRequest();
+        request.setDepartmentName("Engineering");
+
+        when(departmentRepository.findByDepartmentName("Engineering"))
+                .thenReturn(Optional.of(department));
+
+        DepartmentNotCreatedException ex = assertThrows(DepartmentNotCreatedException.class, () ->
+                departmentService.create(request));
+
+        assertEquals("Department is already registered with name: Engineering", ex.getMessage());
+        verify(departmentRepository, times(1)).findByDepartmentName("Engineering");
+        verify(departmentRepository, never()).save(any());
+    }
+
+    @Test
+    void getAllDepartments_ReturnsList() {
         Department dept1 = new Department();
         dept1.setId(1L);
         dept1.setDepartmentName("Science");
@@ -64,65 +92,71 @@ class DepartmentServiceImpSpringUnitTest {
         dept2.setId(2L);
         dept2.setDepartmentName("Arts");
 
-        when(departmentRepository.findAll()).thenReturn(List.of(dept1, dept2));
+        when(departmentRepository.findAll()).thenReturn(Arrays.asList(dept1, dept2));
 
-        List<DepartmentResponse> responses = departmentService.getAllDepartments();
+        List<DepartmentResponse> result = departmentService.getAll();
 
-        assertEquals(2, responses.size());
-        assertTrue(responses.stream().anyMatch(d -> d.getDepartmentName().equals("Science")));
-        assertTrue(responses.stream().anyMatch(d -> d.getDepartmentName().equals("Arts")));
+        assertEquals(2, result.size());
+        assertEquals("Science", result.get(0).getDepartmentName());
+        assertEquals("Arts", result.get(1).getDepartmentName());
 
-        verify(departmentRepository).findAll();
+        verify(departmentRepository, times(1)).findAll();
     }
 
     @Test
-    @DisplayName("Get department by id successfully")
-    void testGetDepartmentByIdSuccess() throws DepartmentNotFoundException {
-        Department dept = new Department();
-        dept.setId(5L);
-        dept.setDepartmentName("Mathematics");
+    void getAllDepartments_ReturnsEmptyList() {
+        when(departmentRepository.findAll()).thenReturn(Collections.emptyList());
 
-        when(departmentRepository.findById(5L)).thenReturn(Optional.of(dept));
+        List<DepartmentResponse> result = departmentService.getAll();
 
-        DepartmentResponse response = departmentService.getDepartmentById(5L);
+        assertTrue(result.isEmpty());
+        verify(departmentRepository, times(1)).findAll();
+    }
+
+    @Test
+    void getById_Success() throws DepartmentNotFoundException {
+        when(departmentRepository.findById(1L)).thenReturn(Optional.of(department));
+
+        DepartmentResponse response = departmentService.getById(1L);
 
         assertNotNull(response);
-        assertEquals(5L, response.getId());
-        assertEquals("Mathematics", response.getDepartmentName());
+        assertEquals(1L, response.getId());
+        assertEquals("Engineering", response.getDepartmentName());
 
-        verify(departmentRepository).findById(5L);
+        verify(departmentRepository, times(1)).findById(1L);
     }
 
     @Test
-    @DisplayName("Get department by id throws exception when not found")
-    void testGetDepartmentByIdNotFound() {
-        when(departmentRepository.findById(100L)).thenReturn(Optional.empty());
+    void getById_NotFound() {
+        when(departmentRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThrows(DepartmentNotFoundException.class, () -> departmentService.getDepartmentById(100L));
+        DepartmentNotFoundException ex = assertThrows(DepartmentNotFoundException.class, () ->
+                departmentService.getById(99L));
 
-        verify(departmentRepository).findById(100L);
+        assertEquals("Department not found with id: 99", ex.getMessage());
+        verify(departmentRepository, times(1)).findById(99L);
     }
 
     @Test
-    @DisplayName("Delete department successfully")
-    void testDeleteDepartmentSuccess() throws DepartmentNotFoundException {
+    void deleteDepartment_Success() throws DepartmentNotFoundException {
         when(departmentRepository.existsById(1L)).thenReturn(true);
         doNothing().when(departmentRepository).deleteById(1L);
 
-        assertDoesNotThrow(() -> departmentService.deleteDepartment(1L));
+        assertDoesNotThrow(() -> departmentService.delete(1L));
 
-        verify(departmentRepository).existsById(1L);
-        verify(departmentRepository).deleteById(1L);
+        verify(departmentRepository, times(1)).existsById(1L);
+        verify(departmentRepository, times(1)).deleteById(1L);
     }
 
     @Test
-    @DisplayName("Delete department throws exception when not found")
-    void testDeleteDepartmentNotFound() {
-        when(departmentRepository.existsById(2L)).thenReturn(false);
+    void deleteDepartment_NotFound() {
+        when(departmentRepository.existsById(88L)).thenReturn(false);
 
-        assertThrows(DepartmentNotFoundException.class, () -> departmentService.deleteDepartment(2L));
+        DepartmentNotFoundException ex = assertThrows(DepartmentNotFoundException.class, () ->
+                departmentService.delete(88L));
 
-        verify(departmentRepository).existsById(2L);
-        verify(departmentRepository, never()).deleteById(any());
+        assertEquals("Department not found with id: 88", ex.getMessage());
+        verify(departmentRepository, times(1)).existsById(88L);
+        verify(departmentRepository, never()).deleteById(anyLong());
     }
 }
